Makefile: add library target
Signed-off-by: Andreas Robinson <andr345@gmail.com>

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,8 +1,25 @@
-OBJS = cs4400f.o low.o util.o main.o scan.o
-test: %: %.o $(OBJS)
-test: LDLIBS = -lsane -lusb-1.0 -lm
-main.o: CPPFLAGS = -DDRIVER_VERSION=0
+BACKEND = gl843
+OBJS = cs4400f.o low.o util.o main.o sanei.o scan.o
+
+CPPFLAGS = -DDRIVER_VERSION=0 -shared -fPIC -fvisibility=hidden
+
+#Make targets
+
+%.o: %.c
+	@echo CC $^
+	@gcc $(CPPFLAGS) -c $^
+
+libsane-$(BACKEND).so.1: $(OBJS)
+	@echo LD $@
+	@ld -o $@ $^ -lusb-1.0 -lm -export-dynamic -shared -soname libsane.so
+	@echo STRIP $@
+	@strip -x $@
+
+test: test.o $(OBJS)
+test:
+	@echo LD $@
+	@gcc $^ -lsane -lusb-1.0 -lm -o $@
 
 .PHONY: clean
 clean:
-	rm -f main test $(addprefix *.,o i s)
+	rm -f libsane-$(BACKEND).so.* $(addprefix *.,o i s)
