Make scanimage -L work, add DBG_api level to track SANE API calls Signed-off-by: Andreas Robinson <andr345@gmail.com>

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,9 +1,7 @@
 BACKEND = gl843
 OBJS = cs4400f.o low.o util.o main.o sanei.o scan.o
 
-CPPFLAGS = -DDRIVER_VERSION=0 -shared -fPIC -fvisibility=hidden
-
-#Make targets
+CPPFLAGS = -DDRIVER_BUILD=0 -shared -fPIC -fvisibility=hidden
 
 %.o: %.c
 	@echo CC $^
