Temporarily add -fno-stack-protector.
dlopen() breaks on my 32-bit box if not used.
Works fine without it on the 64-bit box though.

Signed-off-by: Andreas Robinson <andr345@gmail.com>

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,7 +1,8 @@
 BACKEND = gl843
 OBJS = cs4400f.o low.o util.o main.o sanei.o scan.o
 
-CPPFLAGS = -DDRIVER_BUILD=0 -shared -fPIC -fvisibility=hidden -Wall
+CPPFLAGS = -DDRIVER_BUILD=0 -shared -fPIC -fvisibility=hidden -Wall \
+	-fno-stack-protector
 
 %.o: %.c
 	@echo CC $^
