--- a/driver/Makefile
+++ b/driver/Makefile
@@ -1,5 +1,5 @@
 BACKEND = gl843
-OBJS = cs4400f.o low.o util.o main.o sanei.o scan.o
+OBJS = cs4400f.o low.o convert.o util.o main.o sanei.o scan.o
 
 CPPFLAGS = -DDRIVER_BUILD=0 -shared -fPIC -fvisibility=hidden -Wall \
 	-fno-stack-protector
